Atualização de exceções, log e regras de negócio