@@ -6,8 +6,10 @@ import com.senai.fulleducationsys.controller.dto.response.DocenteResponse;
 
 import com.senai.fulleducationsys.datasource.entity.DocenteEntity;
 
+import com.senai.fulleducationsys.datasource.entity.PapelEntity;
 import com.senai.fulleducationsys.datasource.entity.UsuarioEntity;
 import com.senai.fulleducationsys.datasource.repository.DocenteRepository;
+import com.senai.fulleducationsys.datasource.repository.PapelRepository;
 import com.senai.fulleducationsys.datasource.repository.UsuarioRepository;
 import com.senai.fulleducationsys.infra.exception.CustomException.CampoObrigatorioException;
 import com.senai.fulleducationsys.infra.exception.CustomException.NotFoundException;
@@ -18,6 +20,9 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -26,6 +31,7 @@ public class DocenteService {
     private final DocenteRepository docenteRepository;
     private final TokenService tokenService;
     private final UsuarioRepository usuarioRepository;
+    private final PapelRepository papelRepository;
 
     public DocenteResponse create(DocenteRequest docenteRequest, String token) {
 
@@ -54,9 +60,9 @@ public class DocenteService {
 
         UsuarioEntity usuario = usuarioRepository.findById(docenteRequest.usuarioId())
                 .orElseThrow(() -> {
-            log.error("Erro, usuario não encontrado");
-            return new NotFoundException("Docente não encontrado com o ID: " + docenteRequest.usuarioId());
-        });
+                    log.error("Erro, usuario não encontrado");
+                    return new NotFoundException("Docente não encontrado com o ID: " + docenteRequest.usuarioId());
+            });
 
         DocenteEntity docenteEntity = new DocenteEntity();
         docenteEntity.setUsuario(usuario);
@@ -67,31 +73,78 @@ public class DocenteService {
         log.info("Criando docente-> Salvo com sucesso");
 
         return new DocenteResponse(docenteRegistrado.getDocenteId(),
-                docenteRegistrado.getNome(), docenteRegistrado.getDataEntrada(), docenteRegistrado.getUsuario().getUsuarioId());
+                docenteRegistrado.getNome(), docenteRegistrado.getDataEntrada(), docenteRegistrado.getUsuario().getPapel().getNomePapel());
     }
 
-    public  DocenteResponse getEntityIdDto(Long id, String token) {
-        String papel =  tokenService.buscaCampo(token, "scope");
-        if (!papel.equals("ADM") && !papel.equals("PEDAGOGICO") && !papel.equals("RECRUITER")){
+    public DocenteResponse  getEntityIdDto(Long id, String token) {
+        String papel = tokenService.buscaCampo(token, "scope");
+
+        if (!papel.equals("ADM") && !papel.equals("PEDAGOGICO") && !papel.equals("RECRUITER")) {
             throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
         }
 
-        DocenteEntity docenteId = docenteRepository.findById(id)
-            .orElseThrow(() -> {
-                log.error("Erro, usuário não existe");
-                return new NotFoundException("Docente não encontrado com o ID: " + id);}
-            );
+        Optional<DocenteEntity> docenteId = docenteRepository.findById(id);
+
+        if (docenteId.isEmpty()) {
+            log.error("Erro, usuário não existe");
+            throw new NotFoundException("Não há docente cadastrado com o ID fornecido: " + id);
+        }
+
+        DocenteEntity docente = docenteId.get();
+
+        if (papel.equals("ADM")) {
+        } else if (papel.equals("PEDAGOGICO") || papel.equals("RECRUITER")) {
+            Optional<PapelEntity> papelProfessor = papelRepository.findByNomePapel("PROFESSOR");
+
+            if (papelProfessor.isPresent()) {
+                PapelEntity papelEntity = papelProfessor.get();
+                if (!docente.getUsuario().getPapel().equals(papelEntity)) {
+                    throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
+                }
+            } else {
+                log.error("Erro, papel 'PROFESSOR' não encontrado.");
+                throw new NotFoundException("Papel 'PROFESSOR' não encontrado.");
+            }
+        } else {
+            throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
+        }
 
         log.info("Buscando docente por id ({}) -> Encontrado", id);
-
-        return new DocenteResponse(docenteId.getDocenteId(), docenteId.getNome(), docenteId.getDataEntrada(), docenteId.getUsuario().getUsuarioId());
+        return new DocenteResponse(docente.getDocenteId(), docente.getNome(), docente.getDataEntrada(), docente.getUsuario().getPapel().getNomePapel());
     }
 
     public  DocenteResponse update(Long id, DocenteRequest docenteRequest, String token) {
         String papel =  tokenService.buscaCampo(token, "scope");
-        if (!papel.equals("ADM") && !papel.equals("PEDAGOGICO") && !papel.equals("RECRUITER")){
+        if (!papel.equals("ADM") && !papel.equals("PEDAGOGICO") && !papel.equals("RECRUITER")) {
             throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
         }
+
+        Optional<DocenteEntity> docenteId = docenteRepository.findById(id);
+
+        if (docenteId.isEmpty()) {
+            log.error("Erro, usuário não existe");
+            throw new NotFoundException("Não há docente cadastrado com o ID fornecido: " + id);
+        }
+
+        DocenteEntity docente = docenteId.get();
+
+        if (papel.equals("ADM")) {
+        } else if (papel.equals("PEDAGOGICO") || papel.equals("RECRUITER")) {
+            Optional<PapelEntity> papelProfessor = papelRepository.findByNomePapel("PROFESSOR");
+
+            if (papelProfessor.isPresent()) {
+                PapelEntity papelEntity = papelProfessor.get();
+                if (!docente.getUsuario().getPapel().equals(papelEntity)) {
+                    throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
+                }
+            } else {
+                log.error("Erro, papel 'PROFESSOR' não encontrado.");
+                throw new NotFoundException("Papel 'PROFESSOR' não encontrado.");
+            }
+        } else {
+            throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
+        }
+
         if (docenteRequest.nome() == null
                 || docenteRequest.dataEntrada() == null
                 || docenteRequest.usuarioId() == null) {
@@ -123,7 +176,7 @@ public class DocenteService {
 
         log.info("Alterando docente -> Salvo com sucesso");
 
-        return new DocenteResponse(docenteAtualizado.getDocenteId(), docenteAtualizado.getNome(), docenteAtualizado.getDataEntrada(), docenteAtualizado.getUsuario().getUsuarioId());
+        return new DocenteResponse(docenteAtualizado.getDocenteId(), docenteAtualizado.getNome(), docenteAtualizado.getDataEntrada(), docenteAtualizado.getUsuario().getPapel().getNomePapel());
     }
 
     public List<DocenteResponse> delete(Long id, String token) {
@@ -143,7 +196,7 @@ public class DocenteService {
         List<DocenteEntity> docentesAtualizados = docenteRepository.findAll();
 
         List<DocenteResponse> docenteResponses = docentesAtualizados.stream()
-                .map(docente -> new DocenteResponse(docente.getDocenteId(), docente.getNome(), docente.getDataEntrada(), docente.getUsuario().getUsuarioId())).toList();
+                .map(docente -> new DocenteResponse(docente.getDocenteId(), docente.getNome(), docente.getDataEntrada(), docente.getUsuario().getPapel().getNomePapel())).toList();
 
         return docenteResponses;
 
@@ -151,12 +204,24 @@ public class DocenteService {
 
     public List<DocenteResponse> getEntityDto(String token) {
         String papel =  tokenService.buscaCampo(token, "scope");
-        if (!papel.equals("ADM") && !papel.equals("PEDAGOGICO") && !papel.equals("RECRUITER")){
+
+        List<DocenteEntity> docentes;
+        if (papel.equals("ADM")) {
+            docentes = docenteRepository.findAll();
+        } else if (papel.equals("PEDAGOGICO") || papel.equals("RECRUITER")) {
+            Optional<PapelEntity> papelProfessor = papelRepository.findByNomePapel("PROFESSOR");
+
+            if (papelProfessor.isPresent()) {
+                docentes = docenteRepository.findByUsuarioPapel(Optional.of(papelProfessor.get()));
+            } else {
+                log.error("Erro, papel 'PROFESSOR' não encontrado.");
+                throw new NotFoundException("Papel 'PROFESSOR' não encontrado.");
+            }
+        } else {
             log.error("Erro, Acesso não autorizado.");
             throw new UsuarioNaoAutorizadoException("Acesso não autorizado.");
-        }
 
-        List<DocenteEntity> docentes = docenteRepository.findAll();
+        }
 
         if(docentes.isEmpty()){
             log.error("Erro, usuários não existem");
@@ -165,6 +230,7 @@ public class DocenteService {
         log.info("Buscando todos os docentes -> {} Encontrados", docentes.size());
 
         return docentes.stream().map(
-                docente -> new DocenteResponse(docente.getDocenteId(), docente.getNome(), docente.getDataEntrada(), docente.getUsuario().getUsuarioId())).toList();
+                docente -> new DocenteResponse(docente.getDocenteId(), docente.getNome(), docente.getDataEntrada(), docente.getUsuario().getPapel().getNomePapel()))
+                .collect(Collectors.toList());
     }
 }
